# Deepsearch-agent

./: .dockerignore  .env.example  .gitignore  README.md  _benchmark.py  _run_tests.py  _test_speed.py  interview-questions.docx  interview-questions.md  mock-interview-questions.docx  mock-interview-questions.md  pyproject.toml  reasonix.toml  requirements.txt  star-project-experience.docx  star-project-experience.md
.codegraph/: daemon.pid
.reasonix/: desktop-topic-title-sources.json  desktop-topic-titles.json
app/agent/: main_agent.py  prompts.py
app/agent/subagents/: database_query_agent.py  network_search_agent.py  paper_knowledge_agent.py
app/api/: monitor.py  server.py
app/config/: paths.py  retrieval_config.py
app/evaluation/: evaluate.py
app/memory/: memory_store.py
app/models/: session.py
app/prompt/: prompts.yml
app/services/: paper_card_service.py  paper_matrix_service.py  review_report_service.py
app/storage/paper_index/: _paper_manifest.json  default__vector_store.json  docstore.json  index_store.json
app/tools/: citation_checker.py  db_tools.py  llamaindex_tools.py  pdf_tools.py  rerank_tools.py  search_tool.py  tavily_tool.py
app/utils/: logging.py  path_utils.py
docker/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yaml  nginx.conf
docker/mysql/: mysql.sql
docker/searxng/: settings.yml
docs/: PRD.md  architecture.md  architecture_summary.md  experiment_report.md  experiment_results.json  improvement_report.md  interview_comprehensive_guide.md  interview_guide.md  interview_prep.md  interview_speed_guide.md  responsibilities.md
docs/papers/: README.md  _ground_truth.json  cot-prompting.md  gbim-method.md  generative-agents.md  react-pattern.md  reflexion-pattern.md  retro-method.md  toolformer-method.md
examples/: 6-langgraph-subagent-wrapper.py  7-langchain-agent-subagent-wrapper.py
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AgentTopology.tsx  ChatComposer.tsx  ConversationThread.tsx  EvidenceArchive.tsx  KnowledgeUpload.tsx  PaperCardPanel.tsx  PaperMatrixPanel.tsx  RetrievalTester.tsx  ReviewReportPanel.tsx  SessionList.tsx
frontend/src/hooks/: useDeepAgentSession.ts
frontend/src/lib/: api.ts  config.ts  (+1 more)
output/sessions/: index.json
tests/: conftest.py  test_api_auth.py  test_citation_checker.py  test_citation_verification.py  test_db_tools.py  test_db_tools_advanced.py  test_markdown_tools.py  test_memory_store.py  test_monitor.py  test_paper_card_service.py  test_paper_matrix_service.py  test_path_utils.py  test_path_utils_advanced.py  test_pdf_tools.py  test_production_hardening.py  test_rerank_tools.py  test_review_report_service.py  test_search_tool.py  test_server.py  test_server_advanced.py  test_session_store.py  test_tavily_tool.py  test_upload_file_read_tool.py  test_word_converter.py
