[project]
name = "deepsearch-agents"
version = "0.2.0"
description = "DeepAgents learning examples for deep research agents."
requires-python = ">=3.12,<3.13"
dependencies = [
    # --- Deep Agents 框架 ---
    "deepagents==0.5.7",

    # --- LangChain 生态 ---
    "langchain==1.2.17",
    "langchain-core>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai==1.2.1",
    "langgraph==1.1.10",

    # --- LlamaIndex RAG ---
    "llama-index>=0.12.0",
    "llama-index-readers-file>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-embeddings-huggingface>=0.7.0",

    # --- 检索 ---
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "sentence-transformers>=5.5.1",

    # --- Web 服务 ---
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "python-multipart>=0.0.6",

    # --- 数据库 ---
    "mysql-connector-python>=8.0.0",

    # --- 文件处理 ---
    "python-docx>=1.0.0",
    "pypdf>=3.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "aiofiles>=23.0.0",
    "markdown>=3.5",
    "reportlab>=4.0.0",

    # --- 外部工具 ---
    "requests>=2.31.0",
    "httpx>=0.27.0",

    # --- 基础工具 ---
    "PyYAML>=6.0",
    "pydantic>=2.0.0",
    "python-dotenv==1.2.2",
    "typing-extensions>=4.5.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
